avoid overflow of repos into sidebar when zomming

--- a/src/components/Center.css
+++ b/src/components/Center.css
@@ -5,6 +5,7 @@
     grid-template-columns: 1fr;*//*equivalent to below line*/
     grid-area: center;
     gap: calc(var(--tile-size)*2) calc(var(--tile-size)*0.5);
+    /*height: 100%;*/
 }
 
 #all-repos-container {
@@ -12,6 +13,9 @@
     justify-content: center;
     grid-row: 1;
     gap: calc(var(--tile-size)*0.5);
+    flex-direction: row;
+    flex-wrap: wrap;
+    /*height: 100%;*/
 }
 
 #middle-tiles-container {
@@ -19,4 +23,7 @@
     justify-content: center;
     grid-row: 2;
     gap: calc(var(--tile-size)*0.5);
+    flex-direction: row;
+    flex-wrap: wrap;
+    /*height: 100%;*/
 }
